--- a/backend/package.json
+++ b/backend/package.json
@@ -13,10 +13,12 @@
   "dependencies": {
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "bcrypt": "^5.1.1",
+    "bullmq": "^5.39.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "fluent-ffmpeg": "^2.1.3",
+    "ioredis": "^5.4.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.4",
     "multer": "^1.4.5-lts.1",
