--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "axios": "^1.8.1",
     "bcrypt": "^5.1.1",
     "bullmq": "^5.39.1",
     "cors": "^2.8.5",
