--- a/smoot/package.json
+++ b/smoot/package.json
@@ -16,6 +16,7 @@
     "react-player": "^2.16.0",
     "react-router-dom": "^7.0.2",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^11.0.5",
     "socket.io-client": "^4.8.1",
     "web-vitals": "^2.1.4"
   },
